--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/10-Computational-thinking.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/10-Computational-thinking.mdx
@@ -1,1 +1,644 @@
-Computational thinking
+# Computational thinking
+
+## Objective:
+
+In this lesson you will learn about what computational thinking is, its key features and about the skills related to computational thinking in detail with the help of some real life examples.
+
+  
+  
+
+## Introduction:
+
+Computational thinking is the step that comes before programming. It’s the process of breaking down a problem into simple enough steps that even a computer would understand. We all know that computers take instructions very literally, sometimes to comic results. If we don’t provide computers with instructions that are precise and detailed, our algorithm might forget vital actions that most people take for granted.
+
+  
+
+>For example, consider a simple activity like brushing your teeth. At first it sounds like a simple enough task, but in fact, brushing your teeth involves many simple steps. First, you’ll need a toothbrush and toothpaste. You’ll need a sink with cold water. You’ll need to put the toothpaste on the brush. Don’t forget to turn on the water and run your brush underneath. As you see, such a simple activity actually involves many steps, if you miss one step or put one out of order you might end up with a huge mess!
+
+  
+  
+  
+  
+  
+
+## ![](https://lh5.googleusercontent.com/G4OsXCWXdXxHfe4jlKJTxLpJCa2KPdSvuF-hB_fO2tZb5M0M_xmFz8DGvAyRRu2_xc3_AvK70umWnfX0oxKKXVZOUNa6Kfajlg7C6iP93rUxpWWat3AVLAMGiiT_eq11z26sKq1g4gwGKO2vCxc)
+
+  
+
+## The need to study computational thinking:
+
+Computational thinking helps students develop skills that are attractive for future employment opportunities. Computer science is the fastest growing job market and students' skills in coding are highly sought after job applicants. While the hard tech skills are very important, it’s the softer skills of reasoning and problem solving that employers really find attractive. These skills for success are the key to understanding why computational thinking is so valuable.
+
+  
+
+>While there are obvious benefits for future employment, it’s the development of critical thinking and emotional competencies that set up students for long-term success. When children learn computational thinking skills, it helps them to develop skills important for not only STEM subjects, but also across the social sciences and language arts. In fact, a recent study demonstrated that computational thinking skills were highly correlated with a non-verbal measure of intelligence.
+
+  
+  
+  
+  
+
+![](https://lh5.googleusercontent.com/OSJcK2iWIYhIFOeqGhXHRvWjwDEoqUH34fZhuLIPMu-2uiJi0B615yQu2eg-XSgy3LSO0I3wYtslesmp1OV9TTBl3dk_rH8QlzDtEqBVIJhnZKVE7mJqNr1223ttQR4-e58KEt5HhwRF6MlJAQ4)
+
+  
+
+## Key Skills for Computational Thinking:
+
+There are four key skills in computational thinking:
+
+  
+
+1.Decomposition
+
+2.Pattern Recognition
+
+3.Pattern Abstraction
+
+4.Algorithm Design
+
+![](https://lh5.googleusercontent.com/p8_XBNl7E6A8V8aIeoOhsCQJDqM2yHAHXzBvq-ZSNAe9-yA9GeX_AEVU6zGeUOYD6OauycOMjGviE2qExMek1oRGMwSiWp55ndt8pW0SLhk8sPvo7qKCnV7d_y-FD3X3dfPc1Ye4EZNSfYipT8w)
+
+  
+  
+  
+  
+
+## Decomposition:
+
+Decomposition is one of the four cornerstones of Computer Science. It involves breaking down a complex problem or system into smaller parts that are more manageable and easier to understand. The smaller parts can then be examined and solved, or designed individually, as they are simpler to work with.
+
+  
+
+**Why is decomposition important?**
+
+If a problem is not decomposed, it is much harder to solve. Dealing with many different stages all at once is much more difficult than breaking a problem down into a number of smaller problems and solving each one, one at a time. Breaking the problem down into smaller parts means that each smaller problem can be examined in more detail.
+
+  
+
+Similarly, trying to understand how a complex system works is easier using decomposition. For example, understanding how a bicycle works is more straightforward if the whole bike is separated into smaller parts and each part is examined to see how it works in more detail.
+
+**For example:** 
+
+**Problem Statement:**An employee's weekly pay depends on the rate of pay and the number of hours worked per week. Employees work a minimum of one hour per week, and a maximum of 60. An employee who works more than 40 hours is paid 1.5 times the normal pay rate for all hours worked over 40. Normal pay is £10 per hour. A program is required to calculate and output the weekly pay for any employee.
+
+**Decompose the problem:**
+
+The first step is to break down (decompose) the overall problem into several smaller, more easily solved problems:
+
+  
+
+1.  Find out how many hours are worked
+    
+2.  Find out how many of those hours are to be paid at the normal rate
+    
+3.  Find out how many, if any, of those hours are to be paid at the overtime rate
+    
+4.  Work out the pay for the normal hours
+    
+5.  Work out the pay for the overtime hours
+    
+6.  Total the pay for normal and overtime hours
+    
+7.  Output the result
+    
+
+  
+  
+  
+  
+  
+
+![](https://lh3.googleusercontent.com/s6VyqW1z8EzZX2-7kr5tRjIKOq6ZfXdTjO29rIlglCF9ufRHebvKCi75m4ZNKFPTr51BE7vETd9mJnKvATRE5pnBF3FVeyKcSA3gDabKOPvXEucIpR61o9Imwm-ubXauCsEnp1Eb9ktxACNVfQY)
+
+  
+  
+  
+  
+
+You have been late to school 3 times this week. You’d like to fix the problem and be on time starting tomorrow. To start with, define the problem.
+
+  
+
+**Problem definition:** Tardy to school multiple times.
+
+  
+
+**Solution we would like:** Change the morning process so you can’t be late for school ever again!
+
+  
+
+**Decomposition:**
+
+1. Why were you late for school? I missed the school bus.
+
+2. Why did you miss the bus? It leaves exactly at 7:26 AM and I reached there a few minutes late for it.
+
+3. Why were you a few minutes late? It takes me too long to get all my stuff together (backpack, pack lunch bag, fill water bottle, put on shoes, etc.) in the morning.
+
+Break down **“takes time to get all my stuff together”** into smaller parts and we’ll have multiple potential solutions:
+
+  
+
+1.  I have to pack my backpack in the morning: Maybe pack your bag before you go to sleep and place it by the door?
+    
+2.  It takes me forever to find matching fresh socks in the sock drawer: Organise your sock drawer! Do it anyway, even if you’re not running late! And possibly put fresh socks in your shoes and place them by the door also.
+    
+3.  I never know when it’s time to go to the bus stop: Try setting an alarm on your phone or clock to remind you 5 minutes before it’s time to leave.
+    
+4.  I have to rinse and fill my water bottle: How about rinsing and filling your water bottle at night and setting it in the refrigerator?
+    
+5.  I have to put an outfit together for school, it takes effort to be this cool: Lay out your “outfit” for the next day so you’re not wasting time looking for them in the morning.
+    
+6.  I organise all the above but wake up late and then have to rush: Set an early alarm so you have enough time to get ready.
+    
+7.  I end up shutting it off and going back to sleep: **Set 2 alarms** then!
+    
+
+  
+  
+  
+
+## PATTERN RECOGNITION:
+
+  
+
+Pattern is everything around in this digital world. A pattern can either be seen physically or it can be observed mathematically by applying algorithms.
+
+  
+
+**Example:** The colours on the clothes, speech pattern, etc. In computer science, a pattern is represented using vector feature values.
+
+  
+
+**What is Pattern Recognition?**
+
+  
+
+Pattern recognition is the process of recognizing patterns by using a machine learning algorithm. Pattern recognition can be defined as the classification of data based on knowledge already gained or on statistical information extracted from patterns and/or their representation. One of the important aspects of pattern recognition is its application potential.
+
+![](https://lh5.googleusercontent.com/kVbl3DOeP25RhKSGFoQFeAAxjh9tO7GA7lBwxl8Vxy0C16NTn_sPB3XsuMVDkLy4j5qxmssU9_5NFoBNDmm12CeCJ68O-FRpgb6xcK4kUtCrgSKfEa7npgWsfdbR5nfuNia8bhJvd1Pyn8kcsXA)
+
+## Examples of Pattern Recognition in Everyday Life
+
+Pattern recognition is the foundation of our knowledge. As infants, we used patterns to make sense of the world around us, to begin to respond verbally and grow our language skills, and to develop behavioural responses and cultivate connections in this world.
+
+  
+
+Beyond this, pattern recognition also occurs when scientists are trying to identify the cause of a disease outbreak by looking for similarities in the different cases to determine the source of the outbreak.
+
+  
+
+Additionally, when Netflix recommends shows based on your interests or a chatbot pesters you on a website, the technology (Artificial Intelligence and Machine Learning) rely on pattern recognition.
+
+  
+
+**Sample problem:**
+
+Can you spot the sequence in these numbers ?
+
+  
+
+{ 1,4,7,10,13,16,19,22,25….. }
+
+**Answer:** This in an arithmetic progression whose common difference is 3 and first term is 1
+
+With this information available we can calculate the nth term in this sequence easily
+
+  
+
+Now, try to unfold patterns in the following questions
+
+  
+  
+
+**Que 1:** Identify the figure that completes the pattern.
+
+![](https://lh5.googleusercontent.com/80flNqyVul6FR3_TJs7LoyfsxAzU6DQG6HLnP-GWGruOnw0AldgsemiOWLAJsI2t8ws1IYQckpqGeQzfZV82g-HMpH-U9hv1D_7FyAE3rnexmHGFqAfJypkElAQbPq9xIDLJOsCjDKIAwcRIARY)
+
+(X) (1) (2) (3) (4)
+
+
+<details>
+  <summary>Check the solution!</summary>
+  
+  4)
+  
+</details>
+
+
+  
+
+**Que 2:** Identify the figure that completes the pattern.
+
+![](https://lh5.googleusercontent.com/rN5EhGkE48xHUM0BdS8gDhjDn1ffe-x0rWMqetNuu1CHcyltadWmLY_6psAGRzWocMq8XUneBIjp-hJrP8XA3kB3dLYRFM56Rk6hx_RBr46LEbS1E5JsqqoXXs0NQXrvONbVU_LXg0mwLJJpgv8)
+
+(X) (1) (2) (3) (4)
+
+ 
+<details>
+  <summary>Check the solution!</summary>
+  
+  4)
+  
+</details>
+
+
+  
+  
+
+**Que 3:** Look at this series: 7, 10, 8, 11, 9, 12, ... What number should come next?
+
+  
+
+A.  7
+
+B.  10
+
+C.  12
+
+D.  13
+
+
+<details>
+  <summary>Check the solution!</summary>
+  
+   Option B
+  
+</details>
+
+
+  
+
+## Abstraction:
+
+  
+
+Preserving  information that  is relevant in a  context,and  forgetting  or suppressing  information that  is irrelevant in that  context to solve  a problem
+
+- We  use abstraction  to organise things:
+
+- A human  is a  mammal,  a mammal  is an  animal, and so on
+
+- A “big  picture” so  we can reason without thinking
+
+About the details
+
+- Transfer  learning or learning by analogy
+
+  
+
+**Why is abstraction important?**
+
+Abstraction allows us to create a general idea of what the problem is and how to solve it. The process instructs us to remove all specific details, and any patterns that will not help us solve our problem. This helps us form our idea of the problem. This idea is known as a ‘model’.
+
+  
+
+If we don’t abstract we may end up with the wrong solution to the problem we are trying to solve. With our cat example, if we didn’t abstract we might think that all cats have long tails and short fur. Having abstracted, we know that although cats have tails and fur, not all tails are long and not all fur is short. In this case, abstraction has helped us to form a clearer model of a cat.
+
+  
+
+**Examples of Abstraction in Everyday Life:**
+
+- Another way to think about abstraction is in the context of those big concepts that inform how we think about the world like Newton’s Laws of Motion, the Law of Supply and Demand, or the Pythagorean Theorem.
+    
+
+  
+
+- All of these required the people behind them to think about big, broad, and complex concepts; to break down the problem and to experiment; and to find patterns amongst the experimentations; and to eventually abstract this concrete knowledge to package it into these sterile statements that shelter us from the complexity and difficulty waded through to arrive at this law.
+    
+
+  
+
+- Educators use abstraction when looking at vast sets of student data to focus on the most relevant numbers and trends. And educators also use it when helping a student complete an assignment. There may be kids running around the classroom or making loud noises, but they can tune that out to focus on what the kid in need is asking – until of course it reaches an apex level of rambunctiousness and an intervention must be had.
+    
+
+  
+
+![](https://lh6.googleusercontent.com/_VUuV6FsSso3dbIsw2zSjgAZJqZnYdIOct4xnVwVgTLKoEfkdthez6fFWhMR28J1PvizI0Dkk7ABiovXKY99gUhsmlegvoIu4I5LE32DkFGxuKyMU3nBW1vnvHvM79x36kMn-oj9m-QjKg2Dpyc)
+
+  
+  
+  
+
+## Algorithmic thinking:
+
+  
+
+An algorithm is a process or formula for calculating answers, sorting data, and automating tasks; and algorithmic thinking is the process for developing an algorithm.
+
+  
+
+With algorithmic thinking, students endeavour to construct a step-by-step process for solving a problem and like problems so that the work is replicable by humans or computers.
+
+  
+
+Algorithmic thinking is a derivative of computer science and the process to develop code and program applications. This approach automates the problem-solving process by creating a series of systematic, logical steps that intake a defined set of inputs and produce a defined set of outputs based on these.
+
+  
+
+>In other words, algorithmic thinking is not solving for a specific answer; instead, it solves how to build a sequential, complete, and replicable process that has an end point – an algorithm. Designing an algorithm helps students to both communicate and interpret clear instructions for a predictable, reliable output. This is the crux of computational thinking.
+
+  
+
+## Examples of Algorithms in Everyday Life
+
+And like computational thinking and its other elements we’ve discussed, algorithms are something we experience regularly in our lives.
+
+  
+
+If you’re an amateur chef or a frozen meal aficionado, you follow recipes and directions for preparing food, and that’s an algorithm.
+
+  
+
+Outlining a process for checking out books in a school library or instructions for cleaning up at the end of the day is developing an algorithm and letting your inner computer scientist shine.
+
+  
+
+A video that would explain you better about computational thinking:
+
+-   [Computational Thinking: What Is It? How Is It Used?](https://www.youtube.com/watch?v=qbnTZCj0ugI)
+    
+
+  
+  
+  
+
+Some best resources to know more about computational thinking:
+
+- [The One About Decomposition in Computational Thinking](https://equip.learning.com/decomposition-computational-thinking/)
+
+- [Four Ways to Improve Your Programming Logic Skills](https://www.youtube.com/watch?v=KBRSfqp6ysw)
+
+  
+  
+  
+  
+  
+  
+  
+  
+
+## ASSESSMENT:
+
+  
+
+**1.**Which of these is an example of abstraction?
+
+  
+
+1.  The layers in a network protocol stack
+    
+
+  
+
+2.  Use a pre-written library of procedures and functions to perform operations such as sorting and searching.
+    
+
+  
+
+3.  Ignore the colour of a player token in a snakes ladder game model.
+    
+
+  
+
+4.  Break a complex problem into modules using top down design
+    
+
+  
+
+5.  Subdividing a problem into smaller tasks that different teams can work on independently.
+    
+
+  
+  
+
+**Ans:** Option E
+
+  
+  
+  
+
+**2.**What is __________ problems looked at individually, considering how similar problems have been solved previously called?
+
+  
+
+A)Decomposition
+
+  
+
+B)Abstraction
+
+  
+
+C)Pattern Recognition
+
+  
+
+D)Algorithms
+
+  
+
+**Ans:** Option C
+
+  
+
+**3.**What are _______ simple steps or rules to solve each of the smaller problems can be designed called?
+
+  
+
+A)Decomposition
+
+  
+
+B)Abstraction
+
+  
+
+C)Pattern Recognition
+
+  
+
+D)Algorithms
+
+  
+
+**Ans:** Option D
+
+  
+  
+
+**4.**Decomposition makes problems ___________.
+
+  
+
+A)Better to code
+
+  
+
+B)Harder to solve
+
+  
+
+C)Easier to understand
+
+  
+
+D)More manageable
+
+  
+
+E)both c and d
+
+  
+
+**Ans:** Option E
+
+  
+
+**5.**Which of these is an example of decomposition?
+
+  
+
+A)Break a program into procedures and functions
+
+  
+
+B)Use a pre-written library of procedures and functions to perform operations such as sorting and searching.
+
+  
+
+C)Ignore the colour of a player token in a snakes ladder game model.
+
+  
+
+D)Break a complex problem into modules using top down design
+
+  
+
+E)Subdividing a problem into smaller tasks that different teams can work on independently.
+
+  
+
+F)A,C and E
+
+  
+
+**Ans:** Option F
+
+  
+  
+
+**6.**Define the term abstraction within computational thinking.
+
+  
+
+A)Adding numbers together
+
+  
+
+B)Representing real world problems in a computer program, using symbols and removing unnecessary element
+
+  
+
+C)Taking a real world problem and designing a computer program that exactly replicates every part of that problem in the computer
+
+  
+
+D)Performing multiple calculations on a list of variables
+
+  
+
+**Ans:** Option B
+
+  
+  
+
+**7.**A school database has lots of information on students, the data manager needs to use abstraction? What data should she leave out?
+
+  
+
+A)Age
+
+  
+
+B)Classes
+
+  
+
+C)Guardian's phone numbers
+
+  
+
+D)Eye colour
+
+  
+
+**Ans:** Option D
+
+  
+  
+
+**8.**If in a certain code language BOSTON can be written as SNSNSN, then how would you write CALIFORNIA in the same code language?
+
+  
+
+A)OAOAOA
+
+B)LONLON
+
+C)LOILOILOI
+
+D)LONLONLON
+
+  
+
+**Ans:** Option C
+
+  
+  
+  
+  
+
+**9.**If NEW YORK can be encrypted as PGYAQTM, how can you code the word CHARLOTTE?
+
+  
+
+A)EICSNPVVG
+
+B)EJCTNQVVG
+
+C)EICTNPVVF
+
+D)EJCSMPVVG
+
+  
+
+**Ans:** Option B
+
+
+  
+  
+  
+
+**10.**Identify the figure that completes the pattern.
+
+![](https://lh5.googleusercontent.com/9FqPrDi_G9r1TebkMuI1nDsrliTM9ZGiDJK8MPBdwcrhmsNsl58O8XbxSUQyML0QSNTW3ZmaTZ0P4-y8u9Akp3drRinO6Gbpdf32e9mF3ahQuz1gwUiQ1IKEqvEtRu4sZ-PU_vyUb-SnF5pfWYI)
+
+(X) (1) (2) (3) (4)
+
+  
+
+A.) 1
+
+B.) 2
+
+C.) 3
+
+D.) 4
+
+  
+
+**Ans:** Option B
+
+  
+
