--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/10-Computational-thinking.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/10-Computational-thinking.mdx
@@ -1,13 +1,13 @@
 # Computational thinking
 
-## Objective:
+## Lesson Objective
 
 In this lesson you will learn about what computational thinking is, its key features and about the skills related to computational thinking in detail with the help of some real life examples.
 
   
   
 
-## Introduction:
+## Introduction
 
 Computational thinking is the step that comes before programming. It’s the process of breaking down a problem into simple enough steps that even a computer would understand. We all know that computers take instructions very literally, sometimes to comic results. If we don’t provide computers with instructions that are precise and detailed, our algorithm might forget vital actions that most people take for granted.
 
@@ -63,7 +63,7 @@ There are four key skills in computational thinking:
   
   
 
-## Decomposition:
+## Decomposition
 
 Decomposition is one of the four cornerstones of Computer Science. It involves breaking down a complex problem or system into smaller parts that are more manageable and easier to understand. The smaller parts can then be examined and solved, or designed individually, as they are simpler to work with.
 
@@ -158,7 +158,7 @@ Break down **“takes time to get all my stuff together”** into smaller parts 
   
   
 
-## PATTERN RECOGNITION:
+## PATTERN RECOGNITION
 
   
 
@@ -320,7 +320,7 @@ If we don’t abstract we may end up with the wrong solution to the problem we a
   
   
 
-## Algorithmic thinking:
+## Algorithmic thinking
 
   
 
@@ -378,7 +378,7 @@ Some best resources to know more about computational thinking:
   
   
 
-## ASSESSMENT:
+## ASSESSMENT
 
   
 
