--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
@@ -1,7 +1,7 @@
 
 # Introduction to Problem Solving
 
-## Lesson Objective:
+## Lesson Objective
 
 In this lesson you will learn how Programming is primarily a problem-solving skill and explore some real-world problems that are solved through programming. This is a live class and a warm welcome to the class on Problem solving. You will find more exciting things in this lesson. Happy learning!!
 
