--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/06-Efficient-problem-solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/06-Efficient-problem-solving.mdx
@@ -1,6 +1,6 @@
 # Efficient Problem Solving
 
-## Objective
+## Lesson Objective
 
 In this lesson we will be dealing with the structured way of approaching a Programming Question and solving it efficiently. We will learn about the various methodologies and techniques used to get the right approach towards solving a question by simply discussing a problem of getting the shortest path in the puzzle.
 
